# resolution-rust

./: .gitignore  Cargo.toml  Dockerfile  Justfile  bacon.toml  package.json
content/: getting-started.md
src/: app_error.rs  content.rs  main.rs
static/styles/: entrypoint.css
templates/: base.jinja  content.jinja  index.jinja
